--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,3 +23,14 @@ body {
 .bg-nv{
   background-color: rgba(255, 255, 255, 0.5);
 }
+
+@keyframes gradientMove {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+.animate-gradient {
+  background-size: 200% 200%;
+  animation: gradientMove 5s ease infinite;
+}
+
